--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,3 +7,31 @@
   margin: 0 auto;
 }
 
+/* Background Video */
+
+.video-container {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: -2;
+}
+
+.overlay {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: -1;
+  background-color: rgb(71, 85, 85);
+  opacity: 10%;
+}
+
+.cover-video {
+  min-width: 100%;
+  min-height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
